# code_genie

./: Cargo.toml
src/: generator.rs  main.rs  model.rs  openai.rs  sql_formatter.rs
