[package]
name = "code_genie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["full"] } # A fast and correct HTTP implementation for Rust.
hyper-tls = "^0.5" # Provides an HTTPS connector for use with hyper.
tokio = { version = "^1.0", features = ["full"] } # A runtime for writing reliable asynchronous functions with Rust.
serde = { version = "^1.0", features = ["derive"] } # serialization/deserialization to and from JSON.
serde_json = "^1.0" # For converting to and from JSON.
dotenv = "0.15.0" # For loading environment variables from a .env file.
